-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 16.0.0-beta2
-
None
-
-
978a6d263 (master)
The previous/next buttons as well as (Shift)+F6 work in Search Results, but not in Issues.
Maybe that is related to (or even the cause of) QTCREATORBUG-32502
- relates to
-
QTCREATORBUG-32502 Navigation to linker errors from Issues pane is sub-optimal
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-32503 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
627199,2 | ProjectExplorer: Better behavior for "go next/prev" in issues pane | master | qt-creator/qt-creator | Status: MERGED | +2 | +1 |